SERVER-70873 Use cancelable OperationContext in ACR to prevent deadlock with stepdowns